CF-148 address portfolio PR feedback